# efficientwords

./: .env  Cargo.toml  README.md  generate.sh
dev/: docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/po/: mod.rs  prefix.rs  prefix_meaning.rs  prelude.rs  suffix.rs  suffix_category.rs  suffix_meaning.rs
error/: Cargo.toml
error/src/: lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
src/: api.rs  main.rs
src/api/: mod.rs  prefix.rs  suffix.rs
src/domain/: infra.rs  mod.rs  service.rs
src/infra/: mod.rs  repo.rs
web/: package.json
web/src/: App.tsx  console_prefix.tsx  session_ctx.tsx
web/src/components/: add_prefix.tsx  console_prefix.tsx  console_stem.tsx  console_suffix.tsx  console_word.tsx  prefix_add.tsx  prefix_manage.tsx  prefix_modify.tsx  search.tsx  search_prefix.tsx  stem_add.tsx  stem_manage.tsx  stem_modify.tsx  suffix_add.tsx  suffix_manage.tsx  suffix_modify.tsx  word_add.tsx  word_manage.tsx  word_modify.tsx
web/src/helper/: api.ts  fetch.ts
web/src/helper/mock/: prefix.ts  stem.ts  suffix.ts
web/src/helper/server/: general.ts
web/src/hooks/: fetch.ts  query.tsx  search.tsx
web/src/modules/: fetch.ts
